[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.2.0"
reshell-parser = { path = "../parser" }
reshell-runtime = { path = "../runtime" }
parsy = { path = "../../Parsy" }
clap = { version = "4.1.8", features = ["derive"] }
reedline = { path = "../../reedline" }
nu-ansi-term = "0.47.0"
glob = "0.3.1"
once_cell = "1.17.1"
colored = "2.0.0"
dirs = "4.0.0"
