[package]
name = "reshell-builtins"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dunce = "1.0.5"
dyn-clone = "1.0.20"
indexmap = "2.12.1"
indicatif = "0.18.3"
parsy = "0.15.9"
pomsky = "0.12.0"
regex = "1.12.2"
reshell-parser = { path = "../parser" }
reshell-runtime = { path = "../runtime" }
reshell-checker = { path = "../checker" }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
terminal_size = "0.4.3"
toml = "0.9.10"
rand = { version = "0.9.2" }
reshell-prettify = { path = "../prettify" }
jiff = "0.2.17"
globby = "0.2.4"
rayon = "1.11.0"
