[package]
name = "reshell-builtins"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
dunce = "1.0.5"
indexmap = "2.13.0"
parsy = "0.16.3"
pomsky = "0.12.0"
regex = "1.12.3"
reshell-parser = { path = "../parser" }
reshell-runtime = { path = "../runtime" }
reshell-checker = { path = "../checker" }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
terminal_size = "0.4.4"
toml = "1.1.0"
rand = { version = "0.10.0" }
reshell-prettify = { path = "../prettify" }
jiff = "0.2.23"
globby = "0.2.4"
rayon = "1.11.0"
console = "0.16.3"
