[package]
name = "reshell-repl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reshell"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
crossterm = { version = "0.29.0", features = [], default-features = false }
ctrlc = "3.5.1"
dirs = "6.0.0"
dunce = "1.0.5"
globby = "0.2.4"
indexmap = "2.13.0"
nu-ansi-term = "0.50.3"
parsy = "0.16.2"
reedline = "0.44.0"
reshell-builtins = { path = "../builtins" }
reshell-checker = { path = "../checker" }
reshell-parser = { path = "../parser" }
reshell-prettify = { path = "../prettify" }
reshell-reports = { path = "../reports" }
reshell-runtime = { path = "../runtime" }
reshell-syntax-highlighter = { path = "../syntax-highlighter" }
