[package]
name = "reshell-reports"
version = "0.1.0"
edition = "2024"

[dependencies]
annotate-snippets = "0.12.13"
colored = "3.1.1"
parsy = "0.16.3"
reshell-checker = { version = "0.1.0", path = "../checker" }
reshell-parser = { version = "0.1.0", path = "../parser" }
reshell-prettify = { version = "0.1.0", path = "../prettify" }
reshell-runtime = { version = "0.1.0", path = "../runtime" }
