[package]
name = "reshell-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
indexmap = "2.11.0"
parsy = "0.15.4"
reshell-parser = { path = "../parser" }
reshell-checker = { path = "../checker" }
dyn-clone = "1.0.20"
reshell-prettify = { version = "0.1.0", path = "../prettify" }
